--- a/templates/form.html
+++ b/templates/form.html
@@ -1,4 +1,20 @@
 {% block content %}
-<h1>Home</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Home</h1>
+    <h2>Enter an integer value:</h2>
+    <form action="result" method="POST">
+    <label for="number"><strong>Enter Number:</strong></label>
+    <input type="text" id="number" name="number" placeholder="">
+    <input type="submit" name="submit" value="Sumbit"  /></form>
+</body>
+</html>
 
 {% endblock %}
