--- a/templates/studentForm.html
+++ b/templates/studentForm.html
@@ -1,6 +1,31 @@
 {% block content %}
-<h1>Register</h1>
-<h4>Enter Student Information below</h4>
-<!--Form to request user's name-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Register</h1>
+    <h4>Enter Student Information below</h4>
+    <!--Form to request user's name-->
+    <form action="addStudentOrganisation" method="POST">
+        <label for="name"><strong>Enter name:</strong></label>
+        <input type="text" id="name" name="name" placeholder="">
+        <select for="org" id="org" name="org"><strong>Organization:</strong>
+            <option value="Charlotte Hack">Charlotte Hack</option>
+            <option value="Code 9">Code 9</option>
+            <option value="Women Who Code">Women Who Code</option>
+            <option value="Runtime Terror">Runtime Terror</option>
+            <option value="FrontPage Freebirds">FrontPage Freebirds</option>
+        </select>
+        <input type="submit" name="submit" value="Sumbit"  /></form>
+
+    
+</body>
+</html>
+
 
 {% endblock %}
